==> rusefi/rusefi/firmware/config/boards/kinetis/OS/os/hal/ports/KINETIS/LLD/GPIOv2/hal_pal_lld.c <==
#include "osal.h"
#include "hal.h"
#include "fsl_port.h"

void _pal_lld_irq_handler(PORT_Type *base) {
	uint32_t flags = PORT_GetPinsInterruptFlags(base);
	for (int i = 0; i < 16; i++) {
		if (flags & (1 << i)) {
			// todo: add port-dependent lines?
			_pal_isr_code(i);
		}
	}
	PORT_ClearPinsInterruptFlags(base, flags);
}

void _pal_lld_setpadmode(ioportid_t port,
                         uint8_t pad,
                         iomode_t mode) {

  osalDbgAssert(pad < PADS_PER_PORT, "pal_lld_setpadmode() #1, invalid pad");

  if (mode == PAL_MODE_OUTPUT_PUSHPULL || mode == PAL_MODE_OUTPUT_OPENDRAIN)
    port->PDDR |= ((uint32_t) 1 << pad);
  else
    port->PDDR &= ~((uint32_t) 1 << pad);

  PORT_TypeDef *portcfg = _pal_lld_get_port_config(port);
  osalDbgAssert(portcfg != NULL, "pal_lld_setpadmode() #2, invalid port");

  switch (mode) {
  case PAL_MODE_RESET:
  case PAL_MODE_INPUT:
  case PAL_MODE_OUTPUT_PUSHPULL:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(1);
    break;
#if KINETIS_GPIO_HAS_OPENDRAIN
  case PAL_MODE_OUTPUT_OPENDRAIN:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(1) |
                        PORTx_PCRn_ODE;
    break;
#else
#undef PAL_MODE_OUTPUT_OPENDRAIN
#endif
  case PAL_MODE_INPUT_PULLUP:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(1) |
                        PORTx_PCRn_PE |
                        PORTx_PCRn_PS;
      break;
  case PAL_MODE_INPUT_PULLDOWN:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(1) |
                        PORTx_PCRn_PE;
      break;
  case PAL_MODE_UNCONNECTED:
  case PAL_MODE_INPUT_ANALOG:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(0);
    break;
  case PAL_MODE_ALTERNATIVE_1:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(1);
    break;
  case PAL_MODE_ALTERNATIVE_2:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(2);
    break;
  case PAL_MODE_ALTERNATIVE_3:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(3);
    break;
  case PAL_MODE_ALTERNATIVE_4:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(4);
    break;
  case PAL_MODE_ALTERNATIVE_5:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(5);
    break;
  case PAL_MODE_ALTERNATIVE_6:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(6);
    break;
  case PAL_MODE_ALTERNATIVE_7:
    portcfg->PCR[pad] = PIN_MUX_ALTERNATIVE(7);
    break;
  }
  
  // a little 'hack' for complex pin modes like MISO+PULLUP
  if (mode & PAL_STM32_PUPDR_PULLUP) {
  	portcfg->PCR[pad] |= PAL_STM32_PUPDR_PULLUP;
  }

  // enable high-current drive strength for push-pull outputs (Kinetis-specific feature)
  if (mode & PAL_MODE_OUTPUT_PUSHPULL) {
    // todo: Not all pins are capable of high-drive. Is is a problem?
    PORT_SetPinDriveStrength(portcfg, pad, kPORT_HighDriveStrength);
  }
}

void _pal_lld_init(void) {
  /* Enable clocking on all Ports */
  PCC->CLKCFG[PCC_PORTA_INDEX] |= PCC_CLKCFG_CGC_MASK;
  PCC->CLKCFG[PCC_PORTB_INDEX] |= PCC_CLKCFG_CGC_MASK;
  PCC->CLKCFG[PCC_PORTC_INDEX] |= PCC_CLKCFG_CGC_MASK;
  PCC->CLKCFG[PCC_PORTD_INDEX] |= PCC_CLKCFG_CGC_MASK;
  PCC->CLKCFG[PCC_PORTE_INDEX] |= PCC_CLKCFG_CGC_MASK;

  nvicEnableVector(PORTA_IRQn, KINETIS_GPIO_IRQ_PRIORITY);
  nvicEnableVector(PORTB_IRQn, KINETIS_GPIO_IRQ_PRIORITY);
  nvicEnableVector(PORTC_IRQn, KINETIS_GPIO_IRQ_PRIORITY);
  nvicEnableVector(PORTD_IRQn, KINETIS_GPIO_IRQ_PRIORITY);
  nvicEnableVector(PORTE_IRQn, KINETIS_GPIO_IRQ_PRIORITY);
}

void _pal_lld_init(const PALConfig *config) {

  int i, j;

  /* Enable clocking on all Ports */
  SIM->SCGC5 |= SIM_SCGC5_PORTA |
                SIM_SCGC5_PORTB |
                SIM_SCGC5_PORTC |
                SIM_SCGC5_PORTD |
                SIM_SCGC5_PORTE;

  /* Initial PORT and GPIO setup */
  for (i = 0; i < TOTAL_PORTS; i++) {
    for (j = 0; j < PADS_PER_PORT; j++) {
      pal_lld_setpadmode(config->ports[i].port,
                         j,
                         config->ports[i].pads[j]);
    }
  }
}

void _pal_lld_enablepadevent(ioportid_t port,
                             iopadid_t pad,
                             ioeventmode_t mode) {
  port_interrupt_t cfg;
  switch (mode) {
  case PAL_EVENT_MODE_RISING_EDGE:
  	cfg = kPORT_InterruptRisingEdge;
  	break;
  case PAL_EVENT_MODE_FALLING_EDGE:
  	cfg = kPORT_InterruptFallingEdge;
  	break;
  case PAL_EVENT_MODE_BOTH_EDGES:
  	cfg = kPORT_InterruptEitherEdge;
  	break;
  case PAL_EVENT_MODE_DISABLED:
  default:
  	cfg = kPORT_InterruptOrDMADisabled;
  }
  
  PORT_TypeDef *portcfg = _pal_lld_get_port_config(port);
  PORT_SetPinInterruptConfig(portcfg, pad, cfg);
 
}

void _pal_lld_disablepadevent(ioportid_t port, iopadid_t pad) {
	PORT_TypeDef *portcfg = _pal_lld_get_port_config(port);
	PORT_SetPinInterruptConfig(portcfg, pad, PAL_EVENT_MODE_DISABLED);
	PORT_ClearPinsInterruptFlags(portcfg, 0xffffffff);
}
