==> rusefi/rusefi/firmware/config/boards/cypress/OS/os/hal/ports/Cypress/LLD/GPIOv2/hal_pal_lld.c <==
#include "osal.h"
#include "hal.h"
#include <string.h>
#include "gpio_s6e2_common.h"
#define pc3PowerMask1 defMask1
#define pc4PowerMask1 defMask1
#define ExintNone ExintInstanceIndexMax

static void _pal_lld_irq_handler(uint8_t channel) {
	// change the polarity if needed
	if (bothEdges[channel] != 0) {
		int isHigh = pal_lld_readpad(_pal_linePorts[channel], _pal_linePads[channel]);

		if (isHigh && bothEdges[channel] == ExIntRisingEdge) {
	  		bothEdges[channel] = ExIntFallingEdge;
			Exint_SetDetectMode(channel, bothEdges[channel]);

			_pal_isr_code(channel);
		}
		else if (!isHigh && bothEdges[channel] == ExIntFallingEdge) {
	  		bothEdges[channel] = ExIntRisingEdge;
			Exint_SetDetectMode(channel, bothEdges[channel]);

			_pal_isr_code(channel);
		}
	} else {
		_pal_isr_code(channel);
	}
}

void _pal_lld_setpadmode(ioportid_t port,
                         uint8_t pad,
                         iomode_t mode) {

  osalDbgAssert(pad < PADS_PER_PORT, "pal_lld_setpadmode() #1, invalid pad");
 
  uint32_t padMask = port->padMask[1][pad];

  switch (mode) {
  case PAL_MODE_RESET:
  case PAL_MODE_INPUT:
  case PAL_MODE_INPUT_PULLDOWN:	// todo: we have no pulldown, is it ok to be here?
  	*port->PCR &= ~padMask;	// no pull-up
  	*port->DDR &= ~padMask;	// dir=input
  	*port->PFR &= ~padMask;	// gpio
  	resetAnalogChannel(getAnalogChannel(port, pad));
  	break;
  case PAL_MODE_OUTPUT_PUSHPULL:
  	*port->PZR &= ~padMask;	// no open-drain
  	*port->DDR |= padMask;	// dir=output
  	*port->PFR &= ~padMask;	// gpio
  	resetAnalogChannel(getAnalogChannel(port, pad));
    break;
  case PAL_MODE_OUTPUT_OPENDRAIN:
    *port->PZR |= padMask;	// open-drain (and no-pullup)
  	*port->DDR |= padMask;	// dir=output
  	*port->PFR &= ~padMask;	// gpio
  	resetAnalogChannel(getAnalogChannel(port, pad));
    break;
  case PAL_MODE_INPUT_PULLUP:
    *port->PCR |= padMask;	// pull-up
  	*port->DDR &= ~padMask;	// dir=input
  	*port->PFR &= ~padMask;	// gpio
  	resetAnalogChannel(getAnalogChannel(port, pad));
    break;
  case PAL_MODE_UNCONNECTED:
  case PAL_MODE_INPUT_ANALOG:
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_ANALOG):
  	setPadModeAlternate(port, pad, PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_ANALOG));
  	break;
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_SPI):
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_I2C):
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_UART):
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_CAN):
  case PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_EXTINT):
  	setPadModeAlternate(port, pad, mode);
  	break;
  }
  
  // a little 'hack' for complex pin modes like MISO+PULLUP
  if (mode & PAL_STM32_PUPDR_PULLUP) {
  	*port->PCR |= padMask;	// pull-up
  }

}

void _pal_lld_init(void) {
	PDL_ZERO_STRUCT(stcExtIntConfig);
	stcExtIntConfig.bTouchNvic = TRUE;

	memset(bothEdges, 0, sizeof(bothEdges));
	
#if PAL_USE_CALLBACKS || PAL_USE_WAIT || defined(__DOXYGEN__)
	unsigned i;

	for (i = 0; i < CYPRESS_GPIO_NUM_LINES; i++) {
		_pal_init_event(i);
	}
#endif

	wasExtIntInit = false;
}

void _pal_lld_enablepadevent(ioportid_t port,
                             iopadid_t pad,
                             ioeventmode_t mode) {
	en_exint_level_t cfg;

	ioline_t line = PAL_LINE(port, pad);
	if (line == PAL_NOLINE)
		return;
	if (instanceIdxFromLine[line] == ExintNone)
		return;
  
	bothEdges[line] = 0;

	switch (mode) {
	case PAL_EVENT_MODE_RISING_EDGE:
		cfg = ExIntRisingEdge;
		break;
	case PAL_EVENT_MODE_FALLING_EDGE:
		cfg = ExIntFallingEdge;
		break;
	case PAL_EVENT_MODE_BOTH_EDGES:
#if 0	// [andreika]: unfortunately our FM4 doesn't support it :(
		cfg = ExIntBothEdge;
#else
		_pal_lld_setpadmode(port, pad, PAL_MODE_INPUT);
		cfg = pal_lld_readpad(port, pad) != 0 ? ExIntFallingEdge : ExIntRisingEdge;
		// save the initial edge state so we can change it in IRQ handler
		bothEdges[line] = cfg;
#endif
		break;
	case PAL_EVENT_MODE_DISABLED:
	default:
		_pal_lld_disablepadevent(port, pad);
		return;
	}

	// Set pin function before enabling external interrupt channel!
	_pal_lld_setpadmode(port, pad, PAL_MODE_ALTERNATE(PAL_MODE_ALTERNATIVE_EXTINT));

	_pal_lld_setpadeventhandler(line, cfg, _pal_lld_irq_handler);
}

void _pal_lld_disablepadevent(ioportid_t port, iopadid_t pad) {
	ioline_t line = PAL_LINE(port, pad);
	if (line == PAL_NOLINE)
		return;
	stcExtIntConfig.abEnable[instanceIdxFromLine[line]] = FALSE;
	bothEdges[line] = 0;
	
	Exint_DisableChannel(line);

#if PAL_USE_CALLBACKS || PAL_USE_WAIT
  /* Callback cleared and/or thread reset.*/
  _pal_clear_event(pad);
#endif
}
